fixed small overflow error

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,3 +56,9 @@ p{
   font-size: 1rem;
 }
 
+a {
+  font-family: 'Alliance 1';
+  font-weight: bolder;
+  font-size: 1rem;
+  color: #1C1CFF;
+}
